Final (Unfinished) Product

--- a/Time_Series_Assignment/Tex/ref.bib
+++ b/Time_Series_Assignment/Tex/ref.bib
@@ -88,3 +88,12 @@ eprint = {
    isbn =      {3540401725; 9783540401728; 9783540277521; 3540277528},
    year =      {2005}
 }
+
+@article{auto_tests,
+  title={Power comparisons of five most commonly used autocorrelation tests},
+  author={Uyanto, Stanislaus S},
+  journal={Pakistan Journal of Statistics and Operation Research},
+  pages={119--130},
+  year={2020},
+  publisher={College of Statistical and Actuarial Sciences}
+}
